--- a/index.html
+++ b/index.html
@@ -200,20 +200,18 @@
 
 
         <!-- history -->
-        <section id="history-container" class="hidden mx-auto">
+        <div id="history-container" class="mx-auto">
 
-        </section>
+        </div>
 
 
     </main>
 
 
-    
-
 
     <script src="scripts/events.js"></script>
     <script src="scripts/common.js"></script>
-
+    <script src="scripts/history.js"></script>
 </body>
 
 </html>
