--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- perpendicular -->
+
+
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 
@@ -181,7 +184,7 @@
             
         </section>
 
-        <dialog id="confir-container" class="modal modal-bottom sm:modal-middle">
+        <dialog id="confir-container" class="modal modal-middle">
             <div class="modal-box flex flex-col gap-2 w-[350px]">
                 <h3 class="text-3xl font-bold text-center"> Congrates! </h3>
                 <img class="mx-auto mb-2" src="assets/coin.png" alt="">
